--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Homework 1: Time Series Plots\n",
     "### Author: Brooke Grazda\n",
-    "### Date: 4/21/2025"
+    "### Date: 4/21/2025\n",
+    "[GitHub Repository](https://github.com/bgrazda/climate-modeling-hw1.git)"
    ]
   },
   {
